--- a/glosario.html
+++ b/glosario.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
-    <div class="container">
+    <div class="container bg-dark">
         <div class="row">
             <div class="col-sm-6 col-md-3">
                 <video src="https://www.youtube.com/watch?v=2WLNejhQaug&pp=ygUmcGVsaWN1bGFzIGNvbXBsZXRhcyBlbiBlc3Bhw7FvbCBsYXRpbm8%3D" class="object-fit-contain" autoplay></video>
